--- a/MovieShots/README.Rmd
+++ b/MovieShots/README.Rmd
@@ -32,8 +32,46 @@ devtools::install_github("jmelican21/MovieShots")
 
 This is a basic example which shows you how to solve a common problem:
 
-```{r example}
-#library(MovieShots)
-## basic example code
+```{r example, message=FALSE, warning=FALSE}
+library(MovieShots)
+library(tidyverse)
+
+meandur <- MovieShots %>% group_by(year) %>% summarize(mean = mean(duration))
+
+
+runtime <- MovieShots %>% group_by(year,title) %>% summarize(runtime = sum(duration)/60) #divide by 60 for minutes
+
 ```
+
+Please analyze the data on Golf discs to answer the following questions.
+
+### a. How has average shot duration changed over time?
+
+SOLUTION:
+
+```{r message = FALSE, warning = FALSE}
+ggplot(meandur,
+  aes(x = year, y = mean)) +
+ geom_col() + geom_smooth(se= FALSE, color = "red")+
+labs(x = "Release Year", y = "Average shot duration (seconds)")
+```
+
+As shown above, the average shot duration of movies in this dataset peaks in 1945 at over 12 seconds before declining fairly steadily since the 1960's to around 3 seconds in 2015.
+
+
+
+
+### b) Has total runtime changed over the past century?
+
+SOLUTION:
+
+```{r message = FALSE, warning = FALSE}
+ggplot(runtime,
+  aes(x = year, y = runtime)) +
+  geom_point() + 
+  geom_smooth(se = FALSE) + 
+  labs(x = "Release Year", y = "Runtime (minutes)")
+```
+
+After increasing throughout the first half of the 20th century, average runtime has remained fairly constant at about 120 minutes since the 1960's. 
 
